[package]
name = "hdwallet"
version = "0.4.2"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/jjyr/hdwallet"
keywords = [ "hdwallet", "BIP32", "wallet", "bitcoin", "crypto" ]
readme = "README.md"
description = "Hierarchical deterministic wallet (BIP-32)"

[workspace]
members = [
  "hdwallet-bitcoin"
]

[dependencies]
secp256k1 = "0.28.0"
rand_core = "0.6.4"
ring = "0.17.5"
lazy_static = "1.4"
thiserror = "1.0.50"

[dev-dependencies]
hex = "0.4.3"
base58 = "0.2.0"
ripemd160 = "0.10.0"
rand = "0.8.5"
