[package]
name = "hdwallet-bitcoin"
version = "0.2.2"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/jjyr/hdwallet"
keywords = [ "hdwallet", "BIP32", "wallet", "bitcoin", "crypto" ]
description = "Bitcoin BIP-32 key derivation"

[dependencies]
hdwallet = { path = "..", version = "0.2.4" }
hex = "0.4"
base58 = "0.1"
ripemd160 = "0.8"
